--- a/src/ASPNET.Cadastro.App/appsettings.json
+++ b/src/ASPNET.Cadastro.App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ASPNET.Cadastro.App-96E93806-8423-463B-8415-FF7D7A99474A;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMVC;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
