--- a/src/ASPNET.Cadastro.App/appsettings.json
+++ b/src/ASPNET.Cadastro.App/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMVC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinhaAppMVC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ASUS-ROG\\SQLEXPRESS;Database=MinhaAppMVC;User Id=sa; Password=$Oblivion95; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
