--- a/src/ASPNET.Cadastro.App/Properties/launchSettings.json
+++ b/src/ASPNET.Cadastro.App/Properties/launchSettings.json
@@ -8,14 +8,28 @@
     }
   },
   "profiles": {
-    "IIS Express": {
+    "IIS - DEV": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ASPNET.Cadastro.App": {
+    "IIS - PROD": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
+    },
+    "IIS - STAG": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Staging"
+      }
+    },
+    "Self Hosting": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
